--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,18 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+*.out
+*.bak
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.lof
+*.log
+*.lot
+*.pdf
+*.ps
+*.tcp
+*.toc
+*.tps
